small addtion for our page content

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>helo coursera!</title>
 </head>
 <body>
-<h1>helo coursera!</h1>>
+<h1>Helo Coursera! It's a great course! </h1>>
 </body>
 </html>
